[elections-2015] fix for incorrectly aligning singleProfile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6612,6 +6612,9 @@ h6 {
 .singleProfileContainer .singleProfile {
   height: auto;
 }
+.singleProfileContainer .singleProfile img {
+  min-height: 200px;
+}
 .singleProfileContainer .incoming {
   position: absolute;
   bottom: -125%;
