--- a/src/less/partials/singleProfile.less
+++ b/src/less/partials/singleProfile.less
@@ -6,6 +6,10 @@
 
   .singleProfile {
     height: auto;
+
+    img {
+      min-height: 200px;
+    }
   }
 
   .incoming {
